----------------------
* Log exceptions coming back from the ScriptRunner.

Maven2Builder
----------------------
* Add new attribute "siteGoal" that are run after the normal "goal", such as publishing a site even if a test fails (CC-877). Submitted by Jene Jasper

Mercurial
----------------------
* Fix bug when author name contains special XML characters (CC-879). Patch by Daniel Kullman

StarTeam
----------------------
* Fix problem building because of dependency on PluginRegistryTest by adding the main/test classes to the common.xml classpath (CC-878). Patch by DKelly

TimeBuild
----------------------
* Fix bug where more than 1 day had elapsed since the last build. Reported by Nhat Tran

XcodeBuilder
----------------------
* Fix bug with using nested arguments. XcodeBuilder.Arg was not public.

reporting jsp app
======================

controlpanel.jsp
----------------------
* Force jmx panel to 800pxl width now that new style does not allow it to expand beyond tabs width.

navigation.jsp
----------------------
* Do not insert breaks in status messages now that they are shown in a text area (makes them more readable).


CruiseControl Release Notes - 2.8.1

binary release:
----------------------
* Set jetty.logs to get CCDIR/logs. This prevents a Jetty error when you run CC from a somewhere other than CCDIR and the logs directory doesn't exist in the local directory.

documentation
----------------------
* Add more explaination to ldapmapper (CC-870). Patch by Florian Rosenauer
* Add missing docs for command-line options log4jconfig, jettyxml, agentutil. Reported by David Williams
* Clairfiy that cclastgoodbuildtimestamp and cclastbuildtimestamp are only available if there has been a prior build (CC-193). Reported by Clifton McLellan

build loop
======================

AntBuilder
----------------------
* Fix issue where loggers didn't run under JDK 1.4. Reported by David Williams

ExecBuilder
----------------------